--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Single Page CV of Manisha Bogoto, a Software Developer." />
+    <meta name="keywords" content="Frontend Developer, HTML, CSS, JavaScript, Resume, Web Development" />
+    <meta name="author" content="Manisha Bogoto" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Manisha Bogoto - Software Bogoto" />
+    <meta property="og:description" content="Single Page CV of Manisha Bogoto, a Software Developer." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://manishbogoto.github.io/portfolio/" />
 </head>
 
 <body>
